# sonika_langchain_bot

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: test.py
src/langchain_bot/: langchain_bot_agent.py  langchain_bot_agent_bdi.py  langchain_clasificator.py  langchain_class.py  langchain_files.py  langchain_models.py  langchain_tools.py
src/sonika_langchain_bot/: langchain_bot_agent.py  langchain_bot_agent_bdi.py  langchain_clasificator.py  langchain_models.py
src/sonika_langchain_bot/bot/: multi_node_bot.py  state.py
src/sonika_langchain_bot/bot/nodes/: logger_node.py  output_node.py  react_agent_node.py
src/sonika_langchain_bot/bot/tasker/: tasker_bot.py
src/sonika_langchain_bot/orchestrator/: orchestrator_bot.py  state.py
src/sonika_langchain_bot/orchestrator/nodes/: inner_executor.py  inner_planner.py  orchestrator_node.py  policy_agent_node.py  research_agent_node.py  task_agent_node.py
src/sonika_langchain_bot/planner_dynamic/: __init__.py  planner_bot.py  state.py
src/sonika_langchain_bot/planner_react/: planner_bot.py
src/sonika_langchain_bot/tasker/: state.py  tasker_bot.py
test/: test.py  test_orchestrator.py  test_orchestrator_integration.py  test_planner_dynamic.py  test_repro_infinite_loop.py  test_tasker.py
test_ultimate/banking_operations/: batch_runner.py  instructions.py  stress_test_runner.py  test_cases.py  tools.py
test_ultimate/customer_bank/: stress_test_runner.py  tools.py
test_ultimate/reports/: report_PlannerBot_React_gpt-4o-mini_20251225_005604.txt
(+21 files in other folders)
