[tool.poetry]
name = "sonkika-langchain-bot"
version = "0.0.1"
description = "Agente langchain con LLM"
authors = ["Erley Blanco Carvajal"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langgraph = "^0.2.39"
pypdf = "^5.0.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
