[tool.poetry]
name = "sonkika-langchain-bot"
version = "0.0.1"
description = "Agente langchain con LLM"
authors = ["Erley Blanco Carvajal"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
langchain==0.3.0
langchain-community==0.3.0
langchain-core==0.3.5
langchain-openai==0.2.0
langgraph==0.2.39
langgraph-checkpoint==2.0.2
langgraph-sdk==0.1.34
dataclasses-json==0.6.7
python-dateutil==2.9.0.post0
tiktoken==0.7.0
pydantic==2.9.2
faiss-cpu==1.8.0.post1
pypdf==5.0.0
python-dotenv==1.0.1
typing_extensions==4.12.0
typing-inspect==0.9.0


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
